EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Affiliation__c/fields/hed__Affiliation_Type__c.field-meta.xml
<CustomField>
    <fullName>hed__Affiliation_Type__c</fullName>
    <description>Record type of the affiliated Account, for example, Academic Department or Sports Organization (read-only).</description>
    <formula>hed__Account__r.RecordType.Name</formula>
    <inlineHelpText>Tipo de registro de la cuenta afiliada, como por ejemplo, Departamento académico u Organización deportiva (solo lectura).</inlineHelpText>
    <label>Affiliation Type</label>
    <type>Text</type>
</CustomField>