EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Affiliation__c/fields/hed__Contact__c.field-meta.xml
<CustomField>
    <fullName>hed__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The person affiliated with this organization.</description>
    <inlineHelpText>La persona afiliada con esta organización.</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Affiliated Accounts</relationshipLabel>
    <relationshipName>Affl_Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>