EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Affiliation__c/fields/hed__Description__c.field-meta.xml
<CustomField>
    <fullName>hed__Description__c</fullName>
    <description>Details of how the person and organization are affiliated.</description>
    <inlineHelpText>Detalles de cómo la persona y la organización están afiliadas.</inlineHelpText>
    <label>Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>