EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Affiliation__c/fields/hed__EndDate__c.field-meta.xml
<CustomField>
    <fullName>hed__EndDate__c</fullName>
    <description>The date this Affiliation ended or will end.</description>
    <inlineHelpText>La fecha en la que esta afiliación finalizó o finalizará.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>