EDAUMMSandbox/EDAUMMSandbox/force-app/main/default/objects/hed__Affiliation__c/fields/hed__Primary__c.field-meta.xml
<CustomField>
    <fullName>hed__Primary__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether this is the main Affiliation for this person. If selected, the organization name is stored in the relevant Primary Affiliation field on the Contact record.</description>
    <inlineHelpText>Indica si esta es la afiliación principal para esta persona. Si se selecciona, el nombre de organización se almacenan en el campo Afiliación principal en el registro Contacto.</inlineHelpText>
    <label>Primary</label>
    <type>Checkbox</type>
</CustomField>